--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profileali.png"
+  avatar           : "profileali.jpeg"
   name             : "Alicia García Sierra"
   pronouns         : # example: "she/her"  
   bio              : "Postdoc researcher"
   location         : "Lausanne"
-  employer         : "Swiss Centre of Expertise in Life Course Research LIVES, University of Lausanne."
+  employer         : "LIVES centre, University of Lausanne."
   uri              : # URL
   email            : "alicia.garciasierra@unil.ch" 
 
