--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "research projects"
+    url: /projects/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "talks"
+    url: /talks/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
+  - title: "cv"
     url: /cv/
+        
+  - title: "repositories"
+    url: /repositories/
     
-  - title: "Guide"
-    url: /markdown/
+ #- title: "teaching"
+  #  url: /teaching/
+    
+  #- title: "Guide"
+   # url: /markdown/
