--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Alicia García Sierra"
+title                    : "Alicia García-Sierra"
 title_separator          : "-"
-name                     : &name "Alicia García Sierra"
-description              : &description "Postdoc researcher"
+name                     : &name "Alicia García-Sierra"
+description              : &description "Postdoctoral researcher"
 url                      : https://aliciagarciasierra.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -22,9 +22,9 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profileali.jpeg"
-  name             : "Alicia García Sierra"
+  name             : "Alicia García-Sierra"
   pronouns         : # example: "she/her"  
-  bio              : "Postdoc researcher"
+  bio              : "Postdoctoral researcher"
   location         : "Lausanne"
   employer         : "LIVES centre, University of Lausanne."
   uri              : # URL
