--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /publications/
 
   - title: "research projects"
-    url: /projects/    
+    url: /research projects/    
 
   # - title: "talks"
     # url: /talks/    
