--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
-  goodreads        : https://www.goodreads.com/the_facendera 
+  goodreads        : "the_facendera"
   google_plus      : # Username
   keybase          : # Username
   instagram        : # Username
