--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
-  goodreads        : "the_facendera"
+  goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
   instagram        : # Username
@@ -64,7 +64,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "@aliciagsierra"  # Replace this with your X / Twitter handle
+  twitter          : # Username
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
