--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "PictureAlicia Bio.jpeg"
+  avatar           : "PictureAliciaBio.jpg"
   name             : "Alicia García-Sierra"
   pronouns         : # example: "she/her"  
   bio              : "Postdoctoral researcher"
