--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Alicia García-Sierra"
 title_separator          : "-"
 name                     : &name "Alicia García-Sierra"
-description              : &description "Postdoctoral researcher"
+description              : &description "Postdoctoral researcher in sociology | LIVES Centre"
 url                      : https://aliciagarciasierra.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "PictureAliciaBio.jpg"
   name             : "Alicia García-Sierra"
   pronouns         : # example: "she/her"  
-  bio              : "Postdoctoral researcher"
+  bio              : "Postdoctoral researcher in sociology studying inequality at the LIVES Centre""
   location         : "Lausanne"
   employer         : "LIVES centre, University of Lausanne."
   uri              : # URL
@@ -279,7 +279,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Madrid
 
 
 # Plugins
