--- a/_config.yml
+++ b/_config.yml
@@ -279,7 +279,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: Europe/Madrid
+timezone: Europe/Zurich
 
 
 # Plugins
