--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Alicia García-Sierra"
 title_separator          : "-"
 name                     : &name "Alicia García-Sierra"
-description              : &description "Postdoctoral researcher in sociology, LIVES Centre"
+description              : &description "Assistant Professor, Universidad Carlos III de Madrid"
 url                      : https://aliciagarciasierra.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
