Update bio from 'Postdoctoral researcher' to 'Assistant Professor'

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "PictureAliciaBio.jpg"
   name             : "Alicia García-Sierra"
   pronouns         : # example: "she/her"  
-  bio              : "Postdoctoral researcher"
+  bio              : "Assistant Professor"
   location         : "Lausanne"
   employer         : "LIVES centre, University of Lausanne"
   uri              : # URL
