Update employer information in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : " "
   location         : "Madrid"
-  employer         : "Universidad Carlos III de Madrid"
+  employer         : "Universidad Carlos III de Madrid, Office 18.2.C.05"
   uri              : # URL
   email            : "alicia.garcia@uc3m.es" 
 
